🎨 style: Update page title and add favicon for improved branding

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="mobile-web-app-capable" content="yes" />
-    <title>Cartões de Crédito</title>
+    <link rel="icon" href="https://www.itau.com.br/media/dam/m/39c1bb1de2d2168/original/favicon.ico" />
+    <title>Itáu Cartões</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" />
