🎨 style: Correct title spelling in index.html for consistency

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="mobile-web-app-capable" content="yes" />
     <link rel="icon" href="https://www.itau.com.br/media/dam/m/39c1bb1de2d2168/original/favicon.ico" />
-    <title>Itáu Cartões</title>
+    <title>Itaú Cartões</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" />
